Finished 768 media query styling

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="name">
             <h1>Dariell Vasquez</h1></div>
     </div>
-    <div class="main">
+    <div class="main" class="clearfix">
         <div id="about" class="clearfix">
             <h1>About me</h1>
             <img src="assets/images/my-photo.jpg" alt="Picture of me" />
@@ -28,7 +28,7 @@
             </p>
         </div>
         <aside class="clearfix">
-            <h2>Connect with Me</h2>
+            <h2><span>Connect with Me</span></h2>
             <div class="connect">
                 <a href="https://github.com/Dquez" target="_blank"><img src="assets/images/github.png" alt="Github"/></a>
                 <a href="https://www.linkedin.com/in/dariellvasquez7/" target="_blank"><img src="assets/images/linkedin.svg" alt="Linkedin"/></a>
