Finished 640 media query

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <a href="portfolio.html" target="_blank">Portfolio</a>
         </div>
         <div class="name">
-            <h1>Dariell Vasquez</h1></div>
+            <h1>Dariell Vasquez</h1>
+        </div>
     </div>
     <div class="main" class="clearfix">
         <div id="about" class="clearfix">
