finished portfolio varying styles

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
 		</ul>
 	</div>
 	<aside class="clearfix">
-		<h2>Connect with Me</h2>
+		<h2><span>Connect with Me</span></h2>
 		<div class="connect">
 		<a href="https://github.com/Dquez" target="_blank"><img src="assets/images/github.png" alt="Github"/></a>
 		<a href="https://www.linkedin.com/in/dariellvasquez7/" target="_blank"><img src="assets/images/linkedin.svg" alt="Linkedin"/></a>
